syntax = "proto3";

message NetworkState {
    NetworkType ty = 1;
}
enum NetworkType {
    UnknownNetworkType = 0;
    Wifi = 1;
    Cell = 2;
    Ethernet = 3;
}
